instructions.Instructions.scala.error
Erreur de compilation :
Instructions:6: error: not found: type int
avance(2:int);
         ^